Add three.js landing page

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,10 @@
                     <button class="submit" type="submit" value="Subscribe" name="subscribe">Subscribe</button>
                 </form>
             </div>
+
+            <div id="details">Published by <a href="https://twitter.com/jsantell">@jsantell</a>, <a href="privacy/">privacy policy</a>, archives (coming soon)</div>
         </div>
+        <div id="background"></div>
+        <script src="index.js"></script>
     </body>
 </html>
