--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,15 @@
     <head>
         <title>Immersive Web Weekly</title>
         <link rel="stylesheet" type="text/css" href="styles/index.css" />
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:url" content="https://immersivewebweekly.com">
+        <meta name="twitter:title" content="Immersive Web Weekly">
+        <meta name="twitter:description" content="Immersive Web Weekly is a weekly newsletter of articles about the world of immersive computing on the web, VR/AR in browsers, and all things WebXR.">
+        <meta name="twitter:image" content="https://immersivewebweekly.com/images/large_image.png">
+        <meta property="og:title" content="Immersive Web Weekly">
+        <meta property="og:image" content="https://immersivewebweekly.com/images/large_image.png">
+        <meta property="og:site_name" content="Immersive Web Weekly">
+        <meta property="og:description" content="Immersive Web Weekly is a weekly newsletter of articles about the world of immersive computing on the web, VR/AR in browsers, and all things WebXR.">
     </head>
     <body>
         <div id="content">
