Add correct link to meta image

--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
         <meta name="twitter:url" content="https://immersivewebweekly.com">
         <meta name="twitter:title" content="Immersive Web Weekly">
         <meta name="twitter:description" content="Immersive Web Weekly is a weekly newsletter of articles about the world of immersive computing on the web, VR/AR in browsers, and all things WebXR.">
-        <meta name="twitter:image" content="https://immersivewebweekly.com/images/large_image.png">
+        <meta name="twitter:image" content="https://immersivewebweekly.com/images/large_image.jpg">
         <meta property="og:title" content="Immersive Web Weekly">
-        <meta property="og:image" content="https://immersivewebweekly.com/images/large_image.png">
+        <meta property="og:image" content="https://immersivewebweekly.com/images/large_image.jpg">
         <meta property="og:site_name" content="Immersive Web Weekly">
         <meta property="og:description" content="Immersive Web Weekly is a weekly newsletter of articles about the world of immersive computing on the web, VR/AR in browsers, and all things WebXR.">
     </head>
