--- a/emails/001.html
+++ b/emails/001.html
@@ -589,7 +589,7 @@
                                                 <tr>
                                                     <td valign="top">
                                                         <div mc:edit="preheader_leftcol_content">
-                                                            <p id="preview">{{preview}}</p>
+                                                            <p id="preview">Welcome to the first Immersive Web Weekly!</p>
                                                         </div>
                                                     </td>
                                                 </tr>
@@ -602,7 +602,7 @@
                                                 <tr>
                                                     <td valign="top">
                                                         <div mc:edit="preheader_rightcol_content">
-                                                            <p><a href="{{permalink}}" target="_blank">View email in your browser</a></p>
+                                                            <p><a href="https://immersivewebweekly.com/issues/001" target="_blank">View email in your browser</a></p>
                                                         </div>
                                                     </td>
                                                 </tr>
@@ -638,32 +638,81 @@
                                 <!-- BEGIN MODULE: BODY CONTENT // -->
                                 <div mc:edit="body_content">
                                     <h1><a href="https://immersivewebweekly.com">Immersive Web Weekly</a></h1>
-                                    <div class="info">Issue #{{issue}}, {{date}}, <a href="https://immersivewebweekly.com">immersivewebweekly.com</a></div>
+                                    <div class="info">Issue #001, May 21, 2018, <a href="https://immersivewebweekly.com">immersivewebweekly.com</a></div>
                                     <div id="overview">
-                                        {{{overview}}} {{#if signed}}<span>– {{signed}}</span>{{/if}}
+                                        <p>Welcome to the first Immersive Web Weekly! Every week (at most), an issue will contain a collection of links of what's happening and what's new in the world of immersive web with new articles, tools, projects, spec development updates, events and more. Feel free to send feedback and links to <a href="mailto:immersivewebweekly@gmail.com">immersivewebweekly@gmail.com</a> or <a href="https://twitter.com/jsantell">@jsantell</a> on Twitter. I hope you enjoy!</p> <span>– Jordan</span>
                                     </div>
                                     <div id="content">
-                                        {{#each links}}
-                                        <h2><a href="{{url}}" target="_new">{{title}}</a></h2>
-                                        {{{content}}}
+                                        <h2><a href="https://blog.mozvr.com/experimenting-with-computer-vision-in-webxr/" target="_new">Experimenting with Computer Vision in WebXR</a></h2>
+                                        <p>Mozilla's <a href="https://blairmacintyre.me/">Blair MacIntyre</a> dives into their exploration in exposing computer vision features with WebXR. The research uses their experimental <a href="https://github.com/mozilla/webxr-viewer">WebXR Viewer</a> app, which implements Mozilla's experimental, non-standard WebXR API.</p>
                                         <div class="meta">
                                             <span> > </span>
-                                            <span class="domain"><a href="{{url}}">{{domain}}</a></span>
+                                            <span class="domain"><a href="https://blog.mozvr.com/experimenting-with-computer-vision-in-webxr/">mozvr.com</a></span>
                                             <span> | </span>
                                             <span class="author">
-                                                {{#if authorLink}}
-                                                <a href="{{authorLink}}">
-                                                    {{/if}}
-                                                    {{author}}
-                                                    {{#if authorLink}}
+                                                <a href="https://blairmacintyre.me/">
+                                                    Blair MacIntyre
                                                 </a>
-                                                {{/if}}
                                             </span>
-                                            {{#each tags}}
-                                            <span class="tag tag-{{this}}">{{this}}</span>
-                                            {{/each}}
                                         </div>
-                                        {{/each}}
+                                        <h2><a href="https://hackathon.virtuleap.com/" target="_new">Virtuleap&#x27;s Global WebXR Hackathon</a></h2>
+                                        <p>A competition exploring WebXR concepts on the full spectrum of VR and AR devices, <a href="https://virtuleap.com">Virtuleap</a>'s second Global WebXR Hackathon approaches, running May 25th to June 24th. Prizes, including XR devices, will be announced later this week on the launch date.</p>
+                                        <div class="meta">
+                                            <span> > </span>
+                                            <span class="domain"><a href="https://hackathon.virtuleap.com/">virtuleap.com</a></span>
+                                            <span> | </span>
+                                            <span class="author">
+                                                <a href="https://virtuleap.com">
+                                                    Virtuleap
+                                                </a>
+                                            </span>
+                                        </div>
+                                        <h2><a href="https://aws.amazon.com/blogs/aws/amazon-sumerian-now-generally-available/" target="_new">Amazon Sumerian now available</a></h2>
+                                        <p>Announced last year, Amazon's 3D web editor <a href="https://aws.amazon.com/sumerian/">Sumerian</a> is now available for all to try. Sumerian currently allows the creation of WebGL applications that leverage the WebVR API, as well as mobile applications that expose AR features to web content.</p>
+                                        <div class="meta">
+                                            <span> > </span>
+                                            <span class="domain"><a href="https://aws.amazon.com/blogs/aws/amazon-sumerian-now-generally-available/">amazon.com</a></span>
+                                            <span> | </span>
+                                            <span class="author">
+                                                <a href="https://aws.amazon.com/">
+                                                    Amazon
+                                                </a>
+                                            </span>
+                                        </div>
+                                        <h2><a href="https://medium.com/@stew_rtsmith/space-rocks-technical-deep-dive-9bf67fb8a467" target="_new">Space Rocks — Technical deep dive</a></h2>
+                                        <p><a href="http://stewartsmith.io">Stewart Smith</a> shares the process he used to make <a href="https://spacerocks.moar.io/">Space Rocks</a>, a WebVR ode to the game <em>Asteriods</em>. As the creator of <a href="https://github.com/stewdio/THREE.VRController">VRController</a>, Stewart explains his techniques working with controllers and designing an immersive game, with the corresponding, non-transpiled source code.</p>
+                                        <div class="meta">
+                                            <span> > </span>
+                                            <span class="domain"><a href="https://medium.com/@stew_rtsmith/space-rocks-technical-deep-dive-9bf67fb8a467">medium.com</a></span>
+                                            <span> | </span>
+                                            <span class="author">
+                                                <a href="http://stewartsmith.io">
+                                                    Stewart Smith
+                                                </a>
+                                            </span>
+                                        </div>
+                                        <h2><a href="https://svvr.com/press-releases/svvr-launches-multiverse-for-live-events-and-joins-vrba-high-fidelity" target="_new">SVVR&#x27;s MULTIVERSE and Reality Portals</a></h2>
+                                        <p>On their fifth anniversary, <a href="https://svvr.com">SVVR</a> is launching MULTIVERSE, an open design initiative powering real-time, live event communications between real locations and virtual worlds, powered by WebVR. The <a href="http://voicesofvr.com">Voices of VR</a> podcast covers this announcement in more detail in <a href="http://voicesofvr.com/647-merging-irl-events-with-vr-via-svvrs-reality-portals-metaverse-intiative/">episode #647</a>, an interview with SVVR's founder, <a href="https://twitter.com/karlkrantz">Karl Krantz</a>, on SVVR's larger community efforts.</p>
+                                        <div class="meta">
+                                            <span> > </span>
+                                            <span class="domain"><a href="https://svvr.com/press-releases/svvr-launches-multiverse-for-live-events-and-joins-vrba-high-fidelity">svvr.com</a></span>
+                                            <span> | </span>
+                                            <span class="author">
+                                                <a href="https://svvr.com">
+                                                    SVVR
+                                                </a>
+                                            </span>
+                                        </div>
+                                        <h2><a href="https://bugs.chromium.org/p/chromium/issues/detail?id&#x3D;840866#c103" target="_new">Delaying Chrome&#x27;s Web Audio autoplay policy</a></h2>
+                                        <p>After <a href="https://blog.google/products/chrome/improving-autoplay-chrome/">announcing Chrome's autplay policy change</a> earlier this month, requiring user gesture before enabling media content, the Chrome team received pushback from creative developers who have had audio-driven 3D and VR experiences broken from the change. Chrome is now temporarily rolling back the new policy for Web Audio, with plans on re-enabling <a href="https://bugs.chromium.org/p/chromium/issues/detail?id=840866#c103">the new policy</a> in October.</p>
+                                        <div class="meta">
+                                            <span> > </span>
+                                            <span class="domain"><a href="https://bugs.chromium.org/p/chromium/issues/detail?id&#x3D;840866#c103">chromium.org</a></span>
+                                            <span> | </span>
+                                            <span class="author">
+                                                    John Pallett
+                                            </span>
+                                        </div>
                                     </div>
                                 </div>
                                 <!-- // END MODULE: BODY CONTENT -->
@@ -716,7 +765,7 @@
                                         <td valign="top" id="utilityBar">
                                             <div mc:edit="utility_bar">
                                                 <a href="*|UNSUB|*" class="utilityLink">unsubscribe from this list</a><span class="mobileHide"> | </span><a href="*|UPDATE_PROFILE|*" class="utilityLink">update subscription preferences</a>
-                                                <!-- *|IFNOT:ARCHIVE_PAGE|* --><span class="mobileHide"> | </span><a href="https://immersivewebweekly.com/issues/{{issue}}" class="utilityLink">view email in browser</a>
+                                                <!-- *|IFNOT:ARCHIVE_PAGE|* --><span class="mobileHide"> | </span><a href="https://immersivewebweekly.com/issues/001" class="utilityLink">view email in browser</a>
                                                 <!-- *|END:IF|* -->
                                             </div>
                                         </td>
