--- a/public/issues/001/index.html
+++ b/public/issues/001/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <title>Immersive Web Weekly: Issue #001, May 20, 2018</title>
+      <title>Immersive Web Weekly: Issue #001, May 21, 2018</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:url" content="https://immersivewebweekly.com">
@@ -16,48 +16,118 @@
       <link rel="stylesheet" type="text/css" href="../../styles/issue.css" />
   </head>
   <body>
-    <div id="container">
+      <div id="container">
+
       <h1>Immersive Web Weekly</h1>
-      <div class="info">Issue #001, May 20, 2018</div>
-      <p id="overview">Welcome to the first Immersive Web Weekly! Every week (or so), an issue will contain a collection of links of what&#x27;s happening and what&#x27;s new in the world of immersive web. I hope you enjoy!
- <span>– Jordan</span></p>
+
+      <div class="signup-wrapper">
+      <div class="signup">
+        <p class="signup-info">A weekly newsletter of articles about the world of immersive computing on the web, VR/AR in browsers, and all things WebXR.</p>
+
+        <form action="https://immersivewebweekly.us18.list-manage.com/subscribe/post?u=d8958017f47f03a7a8388f93c&amp;id=b89ab2d07e" method="post" target="_blank">
+            <div class="field">
+                <label for="mce-EMAIL">Email Address </label>
+                <input type="email" placeholder="Your email" value="" name="EMAIL" class="email">
+            </div>
+            <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                <input type="text" name="b_d8958017f47f03a7a8388f93c_b89ab2d07e" tabindex="-1" value="">
+            </div>
+            <button class="submit" type="submit" value="Subscribe" name="subscribe">Subscribe</button>
+        </form>
+      </div>
+      </div>
+
+      <div class="info">Issue #001, May 21, 2018</div>
+      <div id="overview">
+        <p>Welcome to the first Immersive Web Weekly! Every week (at most), an issue will contain a collection of links of what's happening and what's new in the world of immersive web with new articles, tools, projects, spec development updates, events and more. Feel free to send feedback and links to <a href="mailto:immersivewebweekly@gmail.com">immersivewebweekly@gmail.com</a> or <a href="https://twitter.com/jsantell">@jsantell</a> on Twitter. I hope you enjoy!</p> <span>– Jordan</span>
+      </div>
       <div id="content">
-          <h2><a href="https://medium.com/@stew_rtsmith/space-rocks-technical-deep-dive-9bf67fb8a467">Space Rocks — Technical deep dive</a></h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam semper mi facilisis elit consequat, eu aliquam leo molestie. Ut a porta dui. Nulla gravida felis lorem, in scelerisque justo posuere porta. Duis lacinia, eros sit amet luctus tempor, tellus nisl tempor risus, vitae rhoncus elit risus in est. Nunc rhoncus nisi et ultrices lobortis. Vivamus vestibulum euismod enim in cursus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur ullamcorper diam non diam vestibulum, vel feugiat turpis placerat. Vestibulum efficitur lacinia enim, et lacinia turpis bibendum ac.</p>
-          <div class="meta">
-            <span class="domain"><a href="https://medium.com/@stew_rtsmith/space-rocks-technical-deep-dive-9bf67fb8a467">medium.com</a></span>
-            <span class="author"><a href="http://stewartsmith.io">Stewart Smith</a></span>
-              <span class="tag tag-tutorial">tutorial</span>
-          </div>
-          <h2><a href="https://blog.mozvr.com/experimenting-with-computer-vision-in-webxr/">Experimenting with Computer Vision in WebXR</a></h2>
-          <p>Mozilla's <a href="https://blairmacintyre.me/">Blair MacIntyre</a> dives into their exploration in exposing computer vision features with WebXR. The research uses their experimental <a href="https://github.com/mozilla/webxr-viewer">WebXR Viewer</a> app, which implements Mozilla's experimental WebXR API.</p>
+          <h2><a href="https://blog.mozvr.com/experimenting-with-computer-vision-in-webxr/" target="_new">Experimenting with Computer Vision in WebXR</a></h2>
+          <p>Mozilla's <a href="https://blairmacintyre.me/">Blair MacIntyre</a> dives into their exploration in exposing computer vision features with WebXR. The research uses their experimental <a href="https://github.com/mozilla/webxr-viewer">WebXR Viewer</a> app, which implements Mozilla's experimental, non-standard WebXR API.</p>
           <div class="meta">
             <span class="domain"><a href="https://blog.mozvr.com/experimenting-with-computer-vision-in-webxr/">mozvr.com</a></span>
-            <span class="author"><a href="https://blairmacintyre.me/">Blair MacIntyre</a></span>
-              <span class="tag tag-article">article</span>
+            <span class="author">
+                <a href="https://blairmacintyre.me/">
+              Blair MacIntyre
+                </a>
+            </span>
           </div>
-          <h2><a href="https://hackathon.virtuleap.com/">Virtuleap&#x27;s Global WebXR Hackathon</a></h2>
+          <h2><a href="https://hackathon.virtuleap.com/" target="_new">Virtuleap&#x27;s Global WebXR Hackathon</a></h2>
           <p>A competition exploring WebXR concepts on the full spectrum of VR and AR devices, <a href="https://virtuleap.com">Virtuleap</a>'s second Global WebXR Hackathon approaches, running May 25th to June 24th. Prizes, including XR devices, will be announced later this week on the launch date.</p>
           <div class="meta">
             <span class="domain"><a href="https://hackathon.virtuleap.com/">virtuleap.com</a></span>
-            <span class="author"><a href="https://virtuleap.com">Virtuleap</a></span>
-              <span class="tag tag-event">event</span>
+            <span class="author">
+                <a href="https://virtuleap.com">
+              Virtuleap
+                </a>
+            </span>
           </div>
-          <h2><a href="https://aws.amazon.com/blogs/aws/amazon-sumerian-now-generally-available/">Amazon Sumerian now available</a></h2>
+          <h2><a href="https://aws.amazon.com/blogs/aws/amazon-sumerian-now-generally-available/" target="_new">Amazon Sumerian now available</a></h2>
           <p>Announced last year, Amazon's 3D web editor <a href="https://aws.amazon.com/sumerian/">Sumerian</a> is now available for all to try. Sumerian currently allows the creation of WebGL applications that leverage the WebVR API, as well as mobile applications that expose AR features to web content.</p>
           <div class="meta">
             <span class="domain"><a href="https://aws.amazon.com/blogs/aws/amazon-sumerian-now-generally-available/">amazon.com</a></span>
-            <span class="author"><a href="https://aws.amazon.com/">Amazon</a></span>
-              <span class="tag tag-article">article</span>
+            <span class="author">
+                <a href="https://aws.amazon.com/">
+              Amazon
+                </a>
+            </span>
           </div>
-          <h2><a href="https://svvr.com/press-releases/svvr-launches-multiverse-for-live-events-and-joins-vrba-high-fidelity">SVVR&#x27;s MULTIVERSE and Reality Portals</a></h2>
-          <p>On their fifth anniversary, <a href="https://svvr.com">SVVR</a> is launching MULTIVERSE, an open design initiative powering real-time, live event communications between real locations and virtual worlds, powered by WebVR. The <a href="http://voicesofvr.com">Voices of VR</a> podcast covers this announcement in more detail in <a href="http://voicesofvr.com/647-merging-irl-events-with-vr-via-svvrs-reality-portals-metaverse-intiative/">episode #647</a>, with an interview of SVVR's founder, <a href="https://twitter.com/karlkrantz">Karl Krantz</a>, on SVVR's larger community efforts.</p>
+          <h2><a href="https://medium.com/@stew_rtsmith/space-rocks-technical-deep-dive-9bf67fb8a467" target="_new">Space Rocks — Technical deep dive</a></h2>
+          <p><a href="http://stewartsmith.io">Stewart Smith</a> shares the process he used to make <a href="https://spacerocks.moar.io/">Space Rocks</a>, a WebVR ode to the game <em>Asteriods</em>. As the creator of <a href="https://github.com/stewdio/THREE.VRController">VRController</a>, Stewart explains his techniques working with controllers and designing an immersive game, with the corresponding, non-transpiled source code.</p>
+          <div class="meta">
+            <span class="domain"><a href="https://medium.com/@stew_rtsmith/space-rocks-technical-deep-dive-9bf67fb8a467">medium.com</a></span>
+            <span class="author">
+                <a href="http://stewartsmith.io">
+              Stewart Smith
+                </a>
+            </span>
+          </div>
+          <h2><a href="https://svvr.com/press-releases/svvr-launches-multiverse-for-live-events-and-joins-vrba-high-fidelity" target="_new">SVVR&#x27;s MULTIVERSE and Reality Portals</a></h2>
+          <p>On their fifth anniversary, <a href="https://svvr.com">SVVR</a> is launching MULTIVERSE, an open design initiative powering real-time, live event communications between real locations and virtual worlds, powered by WebVR. The <a href="http://voicesofvr.com">Voices of VR</a> podcast covers this announcement in more detail in <a href="http://voicesofvr.com/647-merging-irl-events-with-vr-via-svvrs-reality-portals-metaverse-intiative/">episode #647</a>, an interview with SVVR's founder, <a href="https://twitter.com/karlkrantz">Karl Krantz</a>, on SVVR's larger community efforts.</p>
           <div class="meta">
             <span class="domain"><a href="https://svvr.com/press-releases/svvr-launches-multiverse-for-live-events-and-joins-vrba-high-fidelity">svvr.com</a></span>
-            <span class="author"><a href="https://svvr.com">SVVR</a></span>
-              <span class="tag tag-article">article</span>
+            <span class="author">
+                <a href="https://svvr.com">
+              SVVR
+                </a>
+            </span>
+          </div>
+          <h2><a href="https://bugs.chromium.org/p/chromium/issues/detail?id&#x3D;840866#c103" target="_new">Delaying Chrome&#x27;s Web Audio autoplay policy</a></h2>
+          <p>After <a href="https://blog.google/products/chrome/improving-autoplay-chrome/">announcing Chrome's autplay policy change</a> earlier this month, requiring user gesture before enabling media content, the Chrome team received pushback from creative developers who have had audio-driven 3D and VR experiences broken from the change. Chrome is now temporarily rolling back the new policy for Web Audio, with plans on re-enabling <a href="https://bugs.chromium.org/p/chromium/issues/detail?id=840866#c103">the new policy</a> in October.</p>
+          <div class="meta">
+            <span class="domain"><a href="https://bugs.chromium.org/p/chromium/issues/detail?id&#x3D;840866#c103">chromium.org</a></span>
+            <span class="author">
+              John Pallett
+            </span>
           </div>
       </div>
+
+      <div class="signup-wrapper">
+      <div class="signup">
+        <p class="signup-info">A weekly newsletter of articles about the world of immersive computing on the web, VR/AR in browsers, and all things WebXR.</p>
+
+        <form action="https://immersivewebweekly.us18.list-manage.com/subscribe/post?u=d8958017f47f03a7a8388f93c&amp;id=b89ab2d07e" method="post" target="_blank">
+            <div class="field">
+                <label for="mce-EMAIL">Email Address </label>
+                <input type="email" placeholder="Your email" value="" name="EMAIL" class="email">
+            </div>
+            <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                <input type="text" name="b_d8958017f47f03a7a8388f93c_b89ab2d07e" tabindex="-1" value="">
+            </div>
+            <button class="submit" type="submit" value="Subscribe" name="subscribe">Subscribe</button>
+        </form>
+      </div>
+      </div>
     </div>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119157804-1"></script>
+    <script>
+        if (window.location.hostname === 'immersivewebweekly.com') {
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'UA-119157804-1');
+        }
+    </script>
   </body>
 </html>
