--- a/public/issues/001/index.html
+++ b/public/issues/001/index.html
@@ -4,14 +4,16 @@
       <title>Immersive Web Weekly: Issue #001, May 21, 2018</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="twitter:card" content="summary_large_image">
-        <meta name="twitter:url" content="https://immersivewebweekly.com">
-        <meta name="twitter:title" content="Immersive Web Weekly">
-        <meta name="twitter:description" content="Immersive Web Weekly is a weekly newsletter of articles about the world of immersive computing on the web, VR/AR in browsers, and all things WebXR.">
+        <meta name="twitter:url" content="https://immersivewebweekly.com/issues/001">
+        <meta name="twitter:title" content="Immersive Web Weekly: Issue #001, May 21, 2018">
+        <meta name="twitter:description" content="Welcome to the first Immersive Web Weekly! Every week (at most), an issue will contain a collection of links of what&#x27;s happening and what&#x27;s new in the world of immersive web with new articles, tools, ...">
         <meta name="twitter:image" content="https://immersivewebweekly.com/images/large_image.jpg">
-        <meta property="og:title" content="Immersive Web Weekly">
+        <meta name="twitter:creator" content="@jsantell">
+        <meta property="og:title" content="Immersive Web Weekly: Issue #{issue}}, May 21, 2018">
         <meta property="og:image" content="https://immersivewebweekly.com/images/large_image.jpg">
         <meta property="og:site_name" content="Immersive Web Weekly">
-        <meta property="og:description" content="Immersive Web Weekly is a weekly newsletter of articles about the world of immersive computing on the web, VR/AR in browsers, and all things WebXR.">
+        <meta property="og:description" content="Welcome to the first Immersive Web Weekly! Every week (at most), an issue will contain a collection of links of what&#x27;s happening and what&#x27;s new in the world of immersive web with new articles, tools, ...">
+        <meta property="og:url" content="https://immersivewebweekly.com/issues/001">
       <link href="https://fonts.googleapis.com/css?family=Fira+Sans:200,300,400" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="../../styles/issue.css" />
   </head>
