Add categories, add 005

--- a/emails/001.html
+++ b/emails/001.html
@@ -558,6 +558,30 @@
   font-weight: 300;
   text-transform: uppercase;
 }
+
+.tag {
+  font-weight: 300;
+  padding: 1px 6px;
+  border-radius: 3px;
+  background-color: #eee;
+  border: 1px solid;
+  text-transform: uppercase;
+  display: inline;
+  border-color: #999999;
+}
+.tag-tutorial {
+  border-color: #85ff0a;
+}
+.tag-video {
+  border-color: #9400ff;
+}
+.tag-event {
+  border-color: #ff0a85;
+}
+.tag-web-platform {
+  border-color: #222222;
+}
+
 </style></head>
 
 <body>
@@ -710,7 +734,9 @@
                                             <span class="domain"><a href="https://bugs.chromium.org/p/chromium/issues/detail?id&#x3D;840866#c103">chromium.org</a></span>
                                             <span> | </span>
                                             <span class="author">
+                                                <a href="https://bugs.chromium.org/u/johnpallett@chromium.org/">
                                                     John Pallett
+                                                </a>
                                             </span>
                                         </div>
                                     </div>
