--- a/public/issues/001/index.html
+++ b/public/issues/001/index.html
@@ -99,7 +99,9 @@
           <div class="meta">
             <span class="domain"><a href="https://bugs.chromium.org/p/chromium/issues/detail?id&#x3D;840866#c103">chromium.org</a></span>
             <span class="author">
+                <a href="https://bugs.chromium.org/u/johnpallett@chromium.org/">
               John Pallett
+                </a>
             </span>
           </div>
       </div>
