--- a/emails/004.html
+++ b/emails/004.html
@@ -558,6 +558,30 @@
   font-weight: 300;
   text-transform: uppercase;
 }
+
+.tag {
+  font-weight: 300;
+  padding: 1px 6px;
+  border-radius: 3px;
+  background-color: #eee;
+  border: 1px solid;
+  text-transform: uppercase;
+  display: inline;
+  border-color: #999999;
+}
+.tag-tutorial {
+  border-color: #85ff0a;
+}
+.tag-video {
+  border-color: #9400ff;
+}
+.tag-event {
+  border-color: #ff0a85;
+}
+.tag-web-platform {
+  border-color: #222222;
+}
+
 </style></head>
 
 <body>
