s/magic leap/leap motion/g

--- a/emails/006.html
+++ b/emails/006.html
@@ -726,7 +726,7 @@
                                             </span>
                                         </div>
                                         <h2><a href="http://blog.leapmotion.com/designing-cat-explorer/" target="_new">Designing Cat Explorer</a></h2>
-                                        <p><a href="https://www.magicleap.com/">Magic Leap</a> shares the results of their challenge of designing an application for someone who has never used a VR headset, with no instructions whatsoever, focusing on UX for hand tracking.</p>
+                                        <p><a href="https://leapmotion.com">Leap Motion</a> shares the results of their challenge of designing an application for someone who has never used a VR headset, with no instructions whatsoever, focusing on UX for hand tracking.</p>
                                         <div class="meta">
                                               <span class="tag tag-design">design</span>
                                             <span> > </span>
