Don't escape URLs

--- a/emails/001.html
+++ b/emails/001.html
@@ -733,11 +733,11 @@
                                                 </a>
                                             </span>
                                         </div>
-                                        <h2><a href="https://bugs.chromium.org/p/chromium/issues/detail?id&#x3D;840866#c103" target="_new">Delaying Chrome&#x27;s Web Audio autoplay policy</a></h2>
+                                        <h2><a href="https://bugs.chromium.org/p/chromium/issues/detail?id=840866#c103" target="_new">Delaying Chrome&#x27;s Web Audio autoplay policy</a></h2>
                                         <p>After <a href="https://blog.google/products/chrome/improving-autoplay-chrome/">announcing Chrome's autplay policy change</a> earlier this month, requiring user gesture before enabling media content, the Chrome team received pushback from creative developers who have had audio-driven 3D and VR experiences broken from the change. Chrome is now temporarily rolling back the new policy for Web Audio, with plans on re-enabling <a href="https://bugs.chromium.org/p/chromium/issues/detail?id=840866#c103">the new policy</a> in October.</p>
                                         <div class="meta">
                                             <span> > </span>
-                                            <span class="domain"><a href="https://bugs.chromium.org/p/chromium/issues/detail?id&#x3D;840866#c103">chromium.org</a></span>
+                                            <span class="domain"><a href="https://bugs.chromium.org/p/chromium/issues/detail?id=840866#c103">chromium.org</a></span>
                                             <span> | </span>
                                             <span class="author">
                                                 <a href="https://bugs.chromium.org/u/johnpallett@chromium.org/">
