--- a/public/issues/002/index.html
+++ b/public/issues/002/index.html
@@ -74,20 +74,20 @@
                 </a>
             </span>
           </div>
-          <h2><a href="https://www.youtube.com/watch?v&#x3D;_EnTmF4viyY" target="_new">Mozilla Reality at AR Chicago, CHIVR</a></h2>
+          <h2><a href="https://www.youtube.com/watch?v=_EnTmF4viyY" target="_new">Mozilla Reality at AR Chicago, CHIVR</a></h2>
           <p>Chicago community groups <a href="https://www.meetup.com/ARChicago/">AR Chicago</a> and <a href="http://www.chivr.org/">CHIVR</a> hosted the <a href="https://mixedreality.mozilla.org">Mozilla Reality</a> team, where they presented their work on <a href="https://blog.mozvr.com/firefox-reality-bringing-the-immersive-web-to-mixed-reality-headsets/">Firefox Reality</a>, a web browser designed for VR and AR headsets, <a href="https://hubs.mozilla.com">Mozilla Hubs</a>, a social WebVR experience, and their work on exploring standards.</p>
           <div class="meta">
-            <span class="domain"><a href="https://www.youtube.com/watch?v&#x3D;_EnTmF4viyY">youtube.com</a></span>
+            <span class="domain"><a href="https://www.youtube.com/watch?v=_EnTmF4viyY">youtube.com</a></span>
             <span class="author">
                 <a href="https://mixedreality.mozilla.org">
               Mozilla Reality
                 </a>
             </span>
           </div>
-          <h2><a href="https://www.youtube.com/watch?v&#x3D;oYn-RaydHVQ" target="_new">Introducing Mixed Reality and the Immersive Web</a></h2>
+          <h2><a href="https://www.youtube.com/watch?v=oYn-RaydHVQ" target="_new">Introducing Mixed Reality and the Immersive Web</a></h2>
           <p>A look at building mixed reality experiences on the web using <a href="https://github.com/mozilla/webxr-viewer">WebXR Viewer</a>, <a href="https://github.com/google-ar/WebARonARCore">WebARonARCore</a> and <a href="https://github.com/google-ar/WebARonARKit">WebARonARKit</a>, from <a href="https://www.samsung.com/">Samsung</a>'s <a href="https://peteroshaughnessy.com/">Peter O'Shaughnessy</a>.</p>
           <div class="meta">
-            <span class="domain"><a href="https://www.youtube.com/watch?v&#x3D;oYn-RaydHVQ">youtube.com</a></span>
+            <span class="domain"><a href="https://www.youtube.com/watch?v=oYn-RaydHVQ">youtube.com</a></span>
             <span class="author">
                 <a href="https://peteroshaughnessy.com/">
               Peter O&#x27;Shaughnessy
