--- a/public/issues/006/index.html
+++ b/public/issues/006/index.html
@@ -77,11 +77,11 @@
                 </a>
             </span>
           </div>
-          <h2><a href="https://www.youtube.com/watch?v&#x3D;Aa6G1b5TbSE" target="_new">Look ma! No hands!</a></h2>
+          <h2><a href="https://www.youtube.com/watch?v=Aa6G1b5TbSE" target="_new">Look ma! No hands!</a></h2>
           <p><a href="https://www.samsung.com/">Samsung</a>'s <a href="https://diekus.com/">Diego González</a> speaks on the state of VR on the web, its advantages as a platform, and responsively supporting different devices and controllers.</p>
           <div class="meta">
               <span class="tag tag-video">video</span>
-            <span class="domain"><a href="https://www.youtube.com/watch?v&#x3D;Aa6G1b5TbSE">youtube.com</a></span>
+            <span class="domain"><a href="https://www.youtube.com/watch?v=Aa6G1b5TbSE">youtube.com</a></span>
             <span class="author">
                 <a href="https://diekus.com/">
               Diego González
@@ -109,10 +109,10 @@
                 </a>
             </span>
           </div>
-          <h2><a href="https://www.youtube.com/watch?v&#x3D;GuA1mYG0-xE" target="_new">Silicon Valley WebGL/WebVR Meetup: glTF</a></h2>
+          <h2><a href="https://www.youtube.com/watch?v=GuA1mYG0-xE" target="_new">Silicon Valley WebGL/WebVR Meetup: glTF</a></h2>
           <p>Last month, there was a Silicon Valley WebGL/WebVR meetup focused on glTF. Check out the presentations from folks representing Microsoft, Mozilla, Google, Adobe and Facebook on the glTF ecosystem, compression and more.</p>
           <div class="meta">
-            <span class="domain"><a href="https://www.youtube.com/watch?v&#x3D;GuA1mYG0-xE">youtube.com</a></span>
+            <span class="domain"><a href="https://www.youtube.com/watch?v=GuA1mYG0-xE">youtube.com</a></span>
           </div>
       </div>
 
