s/weekly/weeklyish, rebuild with 008

--- a/public/issues/005/index.html
+++ b/public/issues/005/index.html
@@ -24,7 +24,7 @@
 
       <div class="signup-wrapper">
       <div class="signup">
-        <p class="signup-info">A weekly newsletter of articles about the world of immersive computing on the web, VR/AR in browsers, and all things WebXR.</p>
+        <p class="signup-info">A weeklyish newsletter of articles about the world of immersive computing on the web, VR/AR in browsers, and all things WebXR.</p>
 
         <form action="https://immersivewebweekly.us18.list-manage.com/subscribe/post?u=d8958017f47f03a7a8388f93c&amp;id=b89ab2d07e" method="post" target="_blank">
             <div class="field">
@@ -130,7 +130,7 @@
 
       <div class="signup-wrapper">
       <div class="signup">
-        <p class="signup-info">A weekly newsletter of articles about the world of immersive computing on the web, VR/AR in browsers, and all things WebXR.</p>
+        <p class="signup-info">A weeklyish newsletter of articles about the world of immersive computing on the web, VR/AR in browsers, and all things WebXR.</p>
 
         <form action="https://immersivewebweekly.us18.list-manage.com/subscribe/post?u=d8958017f47f03a7a8388f93c&amp;id=b89ab2d07e" method="post" target="_blank">
             <div class="field">
