--- a/public/issues/006/index.html
+++ b/public/issues/006/index.html
@@ -24,7 +24,7 @@
 
       <div class="signup-wrapper">
       <div class="signup">
-        <p class="signup-info">A weekly newsletter of articles about the world of immersive computing on the web, VR/AR in browsers, and all things WebXR.</p>
+        <p class="signup-info">A weeklyish newsletter of articles about the world of immersive computing on the web, VR/AR in browsers, and all things WebXR.</p>
 
         <form action="https://immersivewebweekly.us18.list-manage.com/subscribe/post?u=d8958017f47f03a7a8388f93c&amp;id=b89ab2d07e" method="post" target="_blank">
             <div class="field">
@@ -69,7 +69,7 @@
           <h2><a href="https://medium.com/vr-ux-ui/tvori-vr-ux-prototyping-tool-ea8fd3f0f409" target="_new">My favorite VR Prototyping Tool</a></h2>
           <p>Product manager for <a href="https://lensreality.com/">LensVR</a> browser <a href="https://medium.com/@billy_co">Billy Vacheva</a> shares her experience exploring new VR UX using <a href="http://tvori.co/">Tvori</a> while prototyping an idea for VR browser bookmarks.</p>
           <div class="meta">
-              <span class="tag tag-design">design</span>
+              <span class="tag tag-ux">ux</span>
             <span class="domain"><a href="https://medium.com/vr-ux-ui/tvori-vr-ux-prototyping-tool-ea8fd3f0f409">medium.com</a></span>
             <span class="author">
                 <a href="https://medium.com/@billy_co">
@@ -91,7 +91,7 @@
           <h2><a href="http://blog.leapmotion.com/designing-cat-explorer/" target="_new">Designing Cat Explorer</a></h2>
           <p><a href="https://leapmotion.com">Leap Motion</a> shares the results of their challenge of designing an application for someone who has never used a VR headset, with no instructions whatsoever, focusing on UX for hand tracking.</p>
           <div class="meta">
-              <span class="tag tag-design">design</span>
+              <span class="tag tag-ux">ux</span>
             <span class="domain"><a href="http://blog.leapmotion.com/designing-cat-explorer/">leapmotion.com</a></span>
             <span class="author">
                 <a href="http://blog.leapmotion.com/author/eugk/">
@@ -118,7 +118,7 @@
 
       <div class="signup-wrapper">
       <div class="signup">
-        <p class="signup-info">A weekly newsletter of articles about the world of immersive computing on the web, VR/AR in browsers, and all things WebXR.</p>
+        <p class="signup-info">A weeklyish newsletter of articles about the world of immersive computing on the web, VR/AR in browsers, and all things WebXR.</p>
 
         <form action="https://immersivewebweekly.us18.list-manage.com/subscribe/post?u=d8958017f47f03a7a8388f93c&amp;id=b89ab2d07e" method="post" target="_blank">
             <div class="field">
