Fix templating error

--- a/public/issues/001/index.html
+++ b/public/issues/001/index.html
@@ -9,7 +9,7 @@
         <meta name="twitter:description" content="Welcome to the first Immersive Web Weekly! Every week (at most), an issue will contain a collection of links of what&#x27;s happening and what&#x27;s new in the world of immersive web with new articles, tools, ...">
         <meta name="twitter:image" content="https://immersivewebweekly.com/images/large_image.jpg">
         <meta name="twitter:creator" content="@jsantell">
-        <meta property="og:title" content="Immersive Web Weekly: Issue #{issue}}, May 21, 2018">
+        <meta property="og:title" content="Immersive Web Weekly: Issue #001, May 21, 2018">
         <meta property="og:image" content="https://immersivewebweekly.com/images/large_image.jpg">
         <meta property="og:site_name" content="Immersive Web Weekly">
         <meta property="og:description" content="Welcome to the first Immersive Web Weekly! Every week (at most), an issue will contain a collection of links of what&#x27;s happening and what&#x27;s new in the world of immersive web with new articles, tools, ...">
