--- a/public/issues/006/index.html
+++ b/public/issues/006/index.html
@@ -9,7 +9,7 @@
         <meta name="twitter:description" content="This issue was a bit later than expected, thanks for your patience! There&#x27;s some pretty cool web hacking and VR UX prototyping research this week; enjoy!">
         <meta name="twitter:image" content="https://immersivewebweekly.com/images/large_image.jpg">
         <meta name="twitter:creator" content="@jsantell">
-        <meta property="og:title" content="Immersive Web Weekly: Issue #{issue}}, July 05, 2018">
+        <meta property="og:title" content="Immersive Web Weekly: Issue #006, July 05, 2018">
         <meta property="og:image" content="https://immersivewebweekly.com/images/large_image.jpg">
         <meta property="og:site_name" content="Immersive Web Weekly">
         <meta property="og:description" content="This issue was a bit later than expected, thanks for your patience! There&#x27;s some pretty cool web hacking and VR UX prototyping research this week; enjoy!">
