--- a/public/issues/007/index.html
+++ b/public/issues/007/index.html
@@ -9,7 +9,7 @@
         <meta name="twitter:description" content="It&#x27;s been a slow, heads-down summer, and then a lot of updates for the end of the month from the Immersive Web Community Group&#x27;s face-to-face meeting in Seattle! I&#x27;m also always looking for news and u...">
         <meta name="twitter:image" content="https://immersivewebweekly.com/images/large_image.jpg">
         <meta name="twitter:creator" content="@jsantell">
-        <meta property="og:title" content="Immersive Web Weekly: Issue #{issue}}, July 31, 2018">
+        <meta property="og:title" content="Immersive Web Weekly: Issue #007, July 31, 2018">
         <meta property="og:image" content="https://immersivewebweekly.com/images/large_image.jpg">
         <meta property="og:site_name" content="Immersive Web Weekly">
         <meta property="og:description" content="It&#x27;s been a slow, heads-down summer, and then a lot of updates for the end of the month from the Immersive Web Community Group&#x27;s face-to-face meeting in Seattle! I&#x27;m also always looking for news and u...">
@@ -96,7 +96,7 @@
             </span>
           </div>
           <h2><a href="https://www.twitch.tv/joshmarinacci/videos/all" target="_new">Josh Marinacci livestreams WebXR development</a></h2>
-          <p><a href="https://mozilla.org/">Mozilla</a>'s <a href="https://joshondesign.com/">Josh Marinacci</a> has been livestreaming the process of building 360 VR experiences and shares looks at the <a href="https://blog.mozvr.com/firefox-reality-bringing-the-immersive-web-to-mixed-reality-headsets/">Firefox Reality</a> research browser. Check out Josh's videos and stay tuned for the next livestream!</p>
+          <p><a href="https://mozilla.org/">Mozilla</a>'s <a href="https://joshondesign.com/">Josh Marinacci</a> has been livestreaming the process of building 360 VR experiences and shares looks at the <a href="https://mixedreality.mozilla.org/firefox-reality">Firefox Reality</a> research browser. Check out Josh's videos and stay tuned for the next livestream!</p>
           <div class="meta">
               <span class="tag tag-video">video</span>
             <span class="domain"><a href="https://www.twitch.tv/joshmarinacci/videos/all">twitch.tv</a></span>
