--- a/public/issues/008/index.html
+++ b/public/issues/008/index.html
@@ -9,7 +9,7 @@
         <meta name="twitter:description" content="Summer went by just like that. I&#x27;ve been super slow sending this out, so thanks for your patience! In just a few weeks, everyone&#x27;s talking about the released Magic Leap One, the Global WebXR Hackathon...">
         <meta name="twitter:image" content="https://immersivewebweekly.com/images/large_image.jpg">
         <meta name="twitter:creator" content="@jsantell">
-        <meta property="og:title" content="Immersive Web Weekly: Issue #{issue}}, August 30, 2018">
+        <meta property="og:title" content="Immersive Web Weekly: Issue #008, August 30, 2018">
         <meta property="og:image" content="https://immersivewebweekly.com/images/large_image.jpg">
         <meta property="og:site_name" content="Immersive Web Weekly">
         <meta property="og:description" content="Summer went by just like that. I&#x27;ve been super slow sending this out, so thanks for your patience! In just a few weeks, everyone&#x27;s talking about the released Magic Leap One, the Global WebXR Hackathon...">
