--- a/public/issues/002/index.html
+++ b/public/issues/002/index.html
@@ -9,7 +9,7 @@
         <meta name="twitter:description" content="">
         <meta name="twitter:image" content="https://immersivewebweekly.com/images/large_image.jpg">
         <meta name="twitter:creator" content="@jsantell">
-        <meta property="og:title" content="Immersive Web Weekly: Issue #{issue}}, May 28, 2018">
+        <meta property="og:title" content="Immersive Web Weekly: Issue #002, May 28, 2018">
         <meta property="og:image" content="https://immersivewebweekly.com/images/large_image.jpg">
         <meta property="og:site_name" content="Immersive Web Weekly">
         <meta property="og:description" content="">
@@ -75,7 +75,7 @@
             </span>
           </div>
           <h2><a href="https://www.youtube.com/watch?v=_EnTmF4viyY" target="_new">Mozilla Reality at AR Chicago, CHIVR</a></h2>
-          <p>Chicago community groups <a href="https://www.meetup.com/ARChicago/">AR Chicago</a> and <a href="http://www.chivr.org/">CHIVR</a> hosted the <a href="https://mixedreality.mozilla.org">Mozilla Reality</a> team, where they presented their work on <a href="https://blog.mozvr.com/firefox-reality-bringing-the-immersive-web-to-mixed-reality-headsets/">Firefox Reality</a>, a web browser designed for VR and AR headsets, <a href="https://hubs.mozilla.com">Mozilla Hubs</a>, a social WebVR experience, and their work on exploring standards.</p>
+          <p>Chicago community groups <a href="https://www.meetup.com/ARChicago/">AR Chicago</a> and <a href="http://www.chivr.org/">CHIVR</a> hosted the <a href="https://mixedreality.mozilla.org">Mozilla Reality</a> team, where they presented their work on <a href="https://mixedreality.mozilla.org/firefox-reality">Firefox Reality</a>, a web browser designed for VR and AR headsets, <a href="https://hubs.mozilla.com">Mozilla Hubs</a>, a social WebVR experience, and their work on exploring standards.</p>
           <div class="meta">
             <span class="domain"><a href="https://www.youtube.com/watch?v=_EnTmF4viyY">youtube.com</a></span>
             <span class="author">
