--- a/public/issues/003/index.html
+++ b/public/issues/003/index.html
@@ -9,7 +9,7 @@
         <meta name="twitter:description" content="Some exciting updates on WebGPU, and research into AR Cardboard, AR UX, and VR in a worker thread. Enjoy!">
         <meta name="twitter:image" content="https://immersivewebweekly.com/images/large_image.jpg">
         <meta name="twitter:creator" content="@jsantell">
-        <meta property="og:title" content="Immersive Web Weekly: Issue #{issue}}, June 04, 2018">
+        <meta property="og:title" content="Immersive Web Weekly: Issue #003, June 04, 2018">
         <meta property="og:image" content="https://immersivewebweekly.com/images/large_image.jpg">
         <meta property="og:site_name" content="Immersive Web Weekly">
         <meta property="og:description" content="Some exciting updates on WebGPU, and research into AR Cardboard, AR UX, and VR in a worker thread. Enjoy!">
