--- a/public/issues/004/index.html
+++ b/public/issues/004/index.html
@@ -9,7 +9,7 @@
         <meta name="twitter:description" content="Apple announced a handful of AR-related features and updates this week at WWDC, showing strong support for the future of augmented reality.">
         <meta name="twitter:image" content="https://immersivewebweekly.com/images/large_image.jpg">
         <meta name="twitter:creator" content="@jsantell">
-        <meta property="og:title" content="Immersive Web Weekly: Issue #{issue}}, June 11, 2018">
+        <meta property="og:title" content="Immersive Web Weekly: Issue #004, June 11, 2018">
         <meta property="og:image" content="https://immersivewebweekly.com/images/large_image.jpg">
         <meta property="og:site_name" content="Immersive Web Weekly">
         <meta property="og:description" content="Apple announced a handful of AR-related features and updates this week at WWDC, showing strong support for the future of augmented reality.">
