--- a/public/issues/005/index.html
+++ b/public/issues/005/index.html
@@ -9,7 +9,7 @@
         <meta name="twitter:description" content="Augmented reality has landed in Chrome Canary! The hit-test feature is the first AR proposal for the WebXR Device API to land in a mainstream browser, enabling a baseline feature set for building AR e...">
         <meta name="twitter:image" content="https://immersivewebweekly.com/images/large_image.jpg">
         <meta name="twitter:creator" content="@jsantell">
-        <meta property="og:title" content="Immersive Web Weekly: Issue #{issue}}, June 18, 2018">
+        <meta property="og:title" content="Immersive Web Weekly: Issue #005, June 18, 2018">
         <meta property="og:image" content="https://immersivewebweekly.com/images/large_image.jpg">
         <meta property="og:site_name" content="Immersive Web Weekly">
         <meta property="og:description" content="Augmented reality has landed in Chrome Canary! The hit-test feature is the first AR proposal for the WebXR Device API to land in a mainstream browser, enabling a baseline feature set for building AR e...">
