--- a/emails/007.html
+++ b/emails/007.html
@@ -735,7 +735,7 @@
                                             </span>
                                         </div>
                                         <h2><a href="https://www.twitch.tv/joshmarinacci/videos/all" target="_new">Josh Marinacci livestreams WebXR development</a></h2>
-                                        <p><a href="https://mozilla.org/">Mozilla</a>'s <a href="https://joshondesign.com/">Josh Marinacci</a> has been livestreaming the process of building 360 VR experiences and shares looks at the <a href="https://blog.mozvr.com/firefox-reality-bringing-the-immersive-web-to-mixed-reality-headsets/">Firefox Reality</a> research browser. Check out Josh's videos and stay tuned for the next livestream!</p>
+                                        <p><a href="https://mozilla.org/">Mozilla</a>'s <a href="https://joshondesign.com/">Josh Marinacci</a> has been livestreaming the process of building 360 VR experiences and shares looks at the <a href="https://mixedreality.mozilla.org/firefox-reality">Firefox Reality</a> research browser. Check out Josh's videos and stay tuned for the next livestream!</p>
                                         <div class="meta">
                                               <span class="tag tag-video">video</span>
                                             <span> > </span>
