--- a/emails/002.html
+++ b/emails/002.html
@@ -668,7 +668,7 @@
                                 <!-- BEGIN MODULE: BODY CONTENT // -->
                                 <div mc:edit="body_content">
                                     <h1><a href="https://immersivewebweekly.com">Immersive Web Weekly</a></h1>
-                                    <div class="info">Issue #002, May 28, 2018, <a href="https://immersivewebweekly.com">immersivewebweekly.com</a></div>
+                                    <div class="info">Immersive Web Weekly: <a href="https://immersivewebweekly.com/issues/002">Issue #002</a>, May 28, 2018</div>
                                     <div id="overview">
                                          
                                     </div>
