--- a/emails/004.html
+++ b/emails/004.html
@@ -668,7 +668,7 @@
                                 <!-- BEGIN MODULE: BODY CONTENT // -->
                                 <div mc:edit="body_content">
                                     <h1><a href="https://immersivewebweekly.com">Immersive Web Weekly</a></h1>
-                                    <div class="info">Issue #004, June 11, 2018, <a href="https://immersivewebweekly.com">immersivewebweekly.com</a></div>
+                                    <div class="info">Immersive Web Weekly: <a href="https://immersivewebweekly.com/issues/004">Issue #004</a>, June 11, 2018</div>
                                     <div id="overview">
                                         <p>Apple announced a handful of AR-related features and updates this week at WWDC, showing strong support for the future of augmented reality.</p> <span>– Jordan</span>
                                     </div>
