--- a/emails/003.html
+++ b/emails/003.html
@@ -668,7 +668,7 @@
                                 <!-- BEGIN MODULE: BODY CONTENT // -->
                                 <div mc:edit="body_content">
                                     <h1><a href="https://immersivewebweekly.com">Immersive Web Weekly</a></h1>
-                                    <div class="info">Issue #003, June 04, 2018, <a href="https://immersivewebweekly.com">immersivewebweekly.com</a></div>
+                                    <div class="info">Immersive Web Weekly: <a href="https://immersivewebweekly.com/issues/003">Issue #003</a>, June 04, 2018</div>
                                     <div id="overview">
                                         <p>Some exciting updates on WebGPU, and research into AR Cardboard, AR UX, and VR in a worker thread. Enjoy!</p> <span>– Jordan</span>
                                     </div>
