--- a/emails/006.html
+++ b/emails/006.html
@@ -668,7 +668,7 @@
                                 <!-- BEGIN MODULE: BODY CONTENT // -->
                                 <div mc:edit="body_content">
                                     <h1><a href="https://immersivewebweekly.com">Immersive Web Weekly</a></h1>
-                                    <div class="info">Issue #006, July 05, 2018, <a href="https://immersivewebweekly.com">immersivewebweekly.com</a></div>
+                                    <div class="info">Immersive Web Weekly: <a href="https://immersivewebweekly.com/issues/006">Issue #006</a>, July 05, 2018</div>
                                     <div id="overview">
                                         <p>This issue was a bit later than expected, thanks for your patience! There's some pretty cool web hacking and VR UX prototyping research this week; enjoy!</p> <span>– Jordan</span>
                                     </div>
