--- a/emails/008.html
+++ b/emails/008.html
@@ -668,7 +668,7 @@
                                 <!-- BEGIN MODULE: BODY CONTENT // -->
                                 <div mc:edit="body_content">
                                     <h1><a href="https://immersivewebweekly.com">Immersive Web Weekly</a></h1>
-                                    <div class="info">Issue #008, August 30, 2018, <a href="https://immersivewebweekly.com">immersivewebweekly.com</a></div>
+                                    <div class="info">Immersive Web Weekly: <a href="https://immersivewebweekly.com/issues/008">Issue #008</a>, August 30, 2018</div>
                                     <div id="overview">
                                         <p>Summer went by just like that. I've been super slow sending this out, so thanks for your patience! In just a few weeks, everyone's talking about the released Magic Leap One, the Global WebXR Hackathon ends as JS13k with WebXR begins, and the Immersive Web Working Group charter is coming together to push the WebXR Device API into a W3C proposed recommendation. Dig in &amp; enjoy!</p> <span>– Jordan</span>
                                     </div>
